# enterprise_build

./: .gitignore  AGENTS.md  EXECUTION_PLAN.md  HACKATHON_CONSTRAINTS.md  JUDGE_GUIDE.md  LICENSE  PROJECT_PLAN.json  README.md  RUNBOOK.md  SYSTEM_DESIGN.md  THIRD_PARTY_NOTICES.md  overview.html  pyproject.toml
.codex/: config.toml
context/: idea.md  overview.md  trust_moa.html  trust_moa.md
data/: puzzle_stats.json  puzzles.fixture.json  puzzles.jsonl
experiments/: SCORECARD.md  campaign.json
personalities/: conscientiousness.md  dominance.md  influence.md  steadiness.md
pipeline/: build_request_echoledger_step13.json  build_request_step10.json  intake_template.md
schemas/: AgentInvocation.schema.json  AgentResult.schema.json  ArtifactEnvelope.schema.json  BuildRequest.schema.json  DirectedRelationship.schema.json  EpisodeRecord.schema.json  EventRecord.schema.json  FrozenRelationshipSnapshot.schema.json  GateResult.schema.json  HandoffAssessment.schema.json  InferenceLearningState.schema.json  InferenceNightOutput.schema.json  NightCuratorOutput.schema.json  RelationshipPolicy.schema.json  RelationshipVector.schema.json  RepairPacket.schema.json  RunManifest.schema.json  ShadowTrustUpdate.schema.json
scripts/: assemble_submission_demo.py  audit_experiment.py  record_browser_demo.mjs  record_submission_overview.mjs  submission_package.py
settings/: continual_learning.json  delivery.json  memory.json  metaplasticity.json  models.json  relationship_policy.json  teams.json  training.json
submission/: COMPLIANCE_CHECKLIST.md  DEMO_SCRIPT.md  README.md  (+1 more)
(+153 files in other folders)
